add_executable(rt_test rt_test.c)
target_include_directories(rt_test PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_link_libraries(rt_test glissmainrt)
add_test(NAME "Runtime" COMMAND rt_test)

add_executable(image_test image_test.c)
target_include_directories(image_test PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_link_libraries(image_test glissmainrt)
add_test(NAME "Image" COMMAND image_test)

add_executable(grt_test grt_test.c)
target_include_directories(grt_test PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_link_libraries(grt_test glissmainrt)
add_gliss_image(grt_gi ../src/grt/gstd.gs ../src/grt/grt.gs)
add_dependencies(grt_test grt_gi)
add_test(NAME "Gliss Runtime" COMMAND grt_test)

add_executable(print_sizes print_sizes.c)
target_include_directories(print_sizes PUBLIC ${PROJECT_SOURCE_DIR}/src)
add_test(NAME "Print Sizes" COMMAND print_sizes)

add_executable(gc_test gc_test.c)
target_include_directories(gc_test PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_link_libraries(gc_test glissmainrt)
add_test(NAME "Garbage Collector" COMMAND gc_test)

add_gliss_image(basic_tests_gi ../src/grt/gstd.gs ./basic_tests.gs)
add_executable(gliss_basic_tests ../src/image_driver.c basic_tests_gi.c)
add_dependencies(gliss_basic_tests basic_tests_gi_c)
target_link_libraries(gliss_basic_tests glissmainrt)
add_test(NAME "Gliss Basic Tests" COMMAND gliss_basic_tests)
